# definitioner

./: .gitignore  Cargo.toml  Makefile  README.md  config.template.toml
migrations/: V1__init.sql
src/: common.rs  config.rs  controller.rs  handler.rs  main.rs  repository.rs
src/common/: model.rs  repository.rs  service.rs
src/common/api/: dictionary.rs
src/common/controller/: telegram.rs
src/common/model/: profile.rs  request.rs  response.rs
src/common/repository/: profile.rs  util.rs  word.rs
src/common/service/: definitioner.rs
src/controller/: definition.rs
src/handler/: telegram.rs
src/model/: response.rs
src/repository/: profile.rs  word.rs
src/service/: definition.rs
src/telegram/: main.rs
