[package]
name = "definitioner-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.163"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["full"] }
tokio-postgres = "0.7.8"
toml = "0.7.4"
reqwest = "0.11"
serde_json = "1.0.96"
